# travel-axum-ddd

./: .env.example  .gitignore  Cargo.toml  README.md  Trunk.toml  package.json  rustfmt.toml  tsconfig.json
bff-tsadmin/: Cargo.toml
bff-tsadmin/src/: app.rs  main.rs  register.rs
bff-tsadmin/src/application/: mod.rs
bff-tsadmin/src/application/argon/: service.rs
bff-tsadmin/src/application/jwt/: mod.rs  service.rs
bff-tsadmin/src/application/product/: cqe.rs  dto.rs  service.rs
bff-tsadmin/src/application/suppliers/: cqe.rs  dto.rs  mod.rs  service.rs
bff-tsadmin/src/domain/: mod.rs
bff-tsadmin/src/domain/product/: mod.rs  repository.rs  service.rs
bff-tsadmin/src/domain/suppliers/: mod.rs  repository.rs  service.rs
bff-tsadmin/src/domain/utils/: security_service.rs  token_service.rs
bff-tsadmin/src/infrastructure/: api_errors.rs  app_errors.rs  config.rs  mod.rs  mysql_connection_pool.rs  paginate.rs
bff-tsadmin/src/infrastructure/mysql/: mod.rs  product.rs  supplier.rs
bff-tsadmin/src/infrastructure/repositories/: mod.rs  product.rs  supplier.rs
bff-tsadmin/src/presentation/dto/: mod.rs  product.rs  suppliers.rs
bff-tsadmin/src/presentation/endpoints/: mod.rs  product_endpoints.rs  suppliers_endpoints.rs  supports_endpoints.rs
bff-tsadmin/src/presentation/extractors/: optional_authentication_extractor.rs  required_authentication_extractor.rs  validation_extractor.rs
bff-tsadmin/src/routes/: mod.rs  product.rs  suppliers.rs
bff-tsadmin/src/tests/: profiles_service_add_user_follow_should.rs
bff-tsmall/: Cargo.toml
bff-tsmall/config/: tsmall.env
bff-tsmall/src/: main.rs  register.rs  router.rs
bff-tsmall/src/application/: mod.rs
bff-tsmall/src/application/argon/: service.rs
bff-tsmall/src/application/articles/: cqe.rs  dto.rs  service.rs
bff-tsmall/src/application/comments/: cqe.rs  dto.rs  service.rs
bff-tsmall/src/application/jwt/: service.rs
bff-tsmall/src/application/profiles/: dto.rs  mod.rs  service.rs
bff-tsmall/src/application/suppliers/: cqe.rs  dto.rs  service.rs
bff-tsmall/src/application/tags/: mod.rs  service.rs
bff-tsmall/src/application/users/: cqe.rs  dto.rs  service.rs
bff-tsmall/src/domain/: mod.rs
bff-tsmall/src/domain/articles/: mod.rs  repository.rs  service.rs
bff-tsmall/src/domain/comments/: mod.rs  repository.rs  service.rs
bff-tsmall/src/domain/profiles/: mod.rs  repository.rs  service.rs
bff-tsmall/src/domain/suppliers/: mod.rs  repository.rs  service.rs
bff-tsmall/src/domain/tags/: mod.rs  repository.rs  service.rs
bff-tsmall/src/domain/users/: mod.rs  repository.rs  service.rs
bff-tsmall/src/domain/utils/: mod.rs  security_service.rs  token_service.rs
bff-tsmall/src/infrastructure/: config.rs  errors.rs  mocks.rs  mod.rs  mysql_connection_pool.rs  pg_connection_pool.rs  seed_service.rs
bff-tsmall/src/infrastructure/dao/: mod.rs  supplier_dto.rs
bff-tsmall/src/infrastructure/repositories/: articles_repository.rs  comments_repository.rs  mod.rs  profiles_repository.rs  suppliers_repository.rs  (+2 more)
bff-tsmall/src/presentation/: mod.rs
bff-tsmall/src/routes/: articles.rs  mod.rs  profiles.rs  routes.rs  suppliers.rs  tags.rs  users.rs
bff-tsmall/src/tests/: profiles_service_get_profile_should.rs  users_service_login_user_should.rs  users_service_register_user_should.rs
client-tcadmin/: Cargo.toml  index.html  main.css
client-tcadmin/src/: app.rs  main.rs
client-tcadmin/src/components/: article_preview.rs  article_previews.rs  tag_list.rs
client-tcadmin/src/contexts/: articles_context.rs  authentication_context.rs
client-tcadmin/src/hooks/: use_selected_article.rs  use_settings.rs
client-tcadmin/src/services/: article_service.rs  authentication_service.rs  profile_service.rs
client-tcadmin/src/utilities/: http.rs
(+31 files in other folders)
