[package]
edition = "2021"
license-file = "../../LICENSE"
name = "client-tsmall"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = {version = "0.6.18"}
clap = {version = "4.3.5", features = ["derive", "env"]}
dotenv = "0.15.0"
itertools = "0.10.2"
jsonwebtoken = "8"
lazy_static = "1.4.0"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
mockall = "0.11.1"
rust-argon2 = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.81"
slug = "0.1.4"
sqlx = {version = "0.6.3", features = ["mysql", "runtime-tokio-rustls", "postgres", "time", "offline"]}
thiserror = "1"
time = {version = "0.3.22", features = ["serde"]}

tokio = {version = "1.17.0", features = ["full"]}
tower = {version = "0.4", features = ["timeout"]}
tower-http = {version = "0.4.1", features = ["trace", "cors"]}

tracing = "0.1"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

validator = {version = "0.16.1", features = ["derive"]}
