[package]
edition = "2021"
license-file = "../../LICENSE"
name = "client-tcadmin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
chrono = "0.4"
dotenv = "0.15.0"
gloo = "0.7.0"
gloo-utils = "0.1"
js-sys = "0.3.55"
lazy_static = "1.4"
log = "0.4.6"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = {version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"]}
yew = "0.20.0"
yew-router = "0.17.0"
